Fixed bugs (including the modal overflow problem).

--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -2,13 +2,13 @@
   position: fixed;
   z-index: 500;
   background-color: white;
-  width: 70%;
+  width: 90%;
   /* border: 1px solid white; */
-  border-radius: 8px;
+  border-radius: 5px;
   box-shadow: 1px 1px 5px #ccc;
   padding: 30px;
-  left: 15%;
-  top: 30%;
+  left: 5%;
+  top: 10vh;
   box-sizing: border-box;
   transition: all 0.3s ease-out;
 }
